--- a/spring-batch-docs/modules/ROOT/pages/readers-and-writers/database.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/readers-and-writers/database.adoc
@@ -123,26 +123,15 @@ can be written out by an `ItemWriter`, and then the next item can be obtained wi
 periodically, which is the essence of high performance batch processing. Furthermore, it
 is  easily configured for injection into a Spring Batch `Step`.
 
-[role="xmlContent"]
-The following example shows how to inject an `ItemReader` into a `Step` in XML:
 
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<bean id="itemReader" class="org.spr...JdbcCursorItemReader">
-    <property name="dataSource" ref="dataSource"/>
-    <property name="sql" value="select ID, NAME, CREDIT from CUSTOMER"/>
-    <property name="rowMapper">
-        <bean class="org.springframework.batch.sample.domain.CustomerCreditRowMapper"/>
-    </property>
-</bean>
-----
-
-[role="javaContent"]
+[tabs]
+====
+Java::
++
 The following example shows how to inject an `ItemReader` into a `Step` in Java:
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @Bean
 public JdbcCursorItemReader<CustomerCredit> itemReader() {
@@ -155,6 +144,27 @@ public JdbcCursorItemReader<CustomerCredit> itemReader() {
 
 }
 ----
+
+XML::
++
+The following example shows how to inject an `ItemReader` into a `Step` in XML:
++
+.XML Configuration
+[source, xml]
+----
+<bean id="itemReader" class="org.spr...JdbcCursorItemReader">
+    <property name="dataSource" ref="dataSource"/>
+    <property name="sql" value="select ID, NAME, CREDIT from CUSTOMER"/>
+    <property name="rowMapper">
+        <bean class="org.springframework.batch.sample.domain.CustomerCreditRowMapper"/>
+    </property>
+</bean>
+----
+
+====
+
+
+
 
 [[JdbcCursorItemReaderProperties]]
 ==== Additional Properties
@@ -246,24 +256,15 @@ It is also worth noting that the fetch size of the underlying cursor can be set 
 `setFetchSize` property. As with `JdbcCursorItemReader`, configuration is
 straightforward.
 
-[role="xmlContent"]
-The following example shows how to inject a Hibernate `ItemReader` in XML:
 
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<bean id="itemReader"
-      class="org.springframework.batch.item.database.HibernateCursorItemReader">
-    <property name="sessionFactory" ref="sessionFactory" />
-    <property name="queryString" value="from CustomerCredit" />
-</bean>
-----
-
-[role="javaContent"]
+[tabs]
+====
+Java::
++
 The following example shows how to inject a Hibernate `ItemReader` in Java:
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @Bean
 public HibernateCursorItemReader itemReader(SessionFactory sessionFactory) {
@@ -274,6 +275,25 @@ public HibernateCursorItemReader itemReader(SessionFactory sessionFactory) {
 			.build();
 }
 ----
+
+XML::
++
+The following example shows how to inject a Hibernate `ItemReader` in XML:
++
+.XML Configuration
+[source, xml]
+----
+<bean id="itemReader"
+      class="org.springframework.batch.item.database.HibernateCursorItemReader">
+    <property name="sessionFactory" ref="sessionFactory" />
+    <property name="queryString" value="from CustomerCredit" />
+</bean>
+----
+
+====
+
+
+
 
 [[StoredProcedureItemReader]]
 === `StoredProcedureItemReader`
@@ -288,28 +308,16 @@ The stored procedure can return the cursor in three different ways:
 * As a ref-cursor returned as an out parameter (used by Oracle and PostgreSQL).
 * As the return value of a stored function call.
 
-[role="xmlContent"]
-The following XML example configuration uses the same 'customer credit' example as earlier
-examples:
 
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<bean id="reader" class="o.s.batch.item.database.StoredProcedureItemReader">
-    <property name="dataSource" ref="dataSource"/>
-    <property name="procedureName" value="sp_customer_credit"/>
-    <property name="rowMapper">
-        <bean class="org.springframework.batch.sample.domain.CustomerCreditRowMapper"/>
-    </property>
-</bean>
-----
-
-[role="javaContent"]
+[tabs]
+====
+Java::
++
 The following Java example configuration uses the same 'customer credit' example as
 earlier examples:
-
++
 .Java Configuration
-[source, xml, role="javaContent"]
+[source, xml]
 ----
 @Bean
 public StoredProcedureItemReader reader(DataSource dataSource) {
@@ -324,35 +332,41 @@ public StoredProcedureItemReader reader(DataSource dataSource) {
 ----
 //TODO: Fix the above config to use a builder once we have one for it.
 
+XML::
++
+The following XML example configuration uses the same 'customer credit' example as earlier
+examples:
++
+.XML Configuration
+[source, xml]
+----
+<bean id="reader" class="o.s.batch.item.database.StoredProcedureItemReader">
+    <property name="dataSource" ref="dataSource"/>
+    <property name="procedureName" value="sp_customer_credit"/>
+    <property name="rowMapper">
+        <bean class="org.springframework.batch.sample.domain.CustomerCreditRowMapper"/>
+    </property>
+</bean>
+----
+====
+
+
+
 The preceding example relies on the stored procedure to provide a `ResultSet` as a
 returned result (option 1 from earlier).
 
 If the stored procedure returned a `ref-cursor` (option 2), then we would need to provide
 the position of the out parameter that is the returned `ref-cursor`.
 
-[role="xmlContent"]
-The following example shows how to work with the first parameter being a ref-cursor in
-XML:
-
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<bean id="reader" class="o.s.batch.item.database.StoredProcedureItemReader">
-    <property name="dataSource" ref="dataSource"/>
-    <property name="procedureName" value="sp_customer_credit"/>
-    <property name="refCursorPosition" value="1"/>
-    <property name="rowMapper">
-        <bean class="org.springframework.batch.sample.domain.CustomerCreditRowMapper"/>
-    </property>
-</bean>
-----
-
-[role="javaContent"]
+[tabs]
+====
+Java::
++
 The following example shows how to work with the first parameter being a ref-cursor in
 Java:
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @Bean
 public StoredProcedureItemReader reader(DataSource dataSource) {
@@ -367,30 +381,39 @@ public StoredProcedureItemReader reader(DataSource dataSource) {
 }
 ----
 
-If the cursor was returned from a stored function (option 3), we would need to set the
-property "[maroon]#function#" to `true`. It defaults to `false`.
-
-[role="xmlContent"]
-The following example shows property to `true` in XML:
-
+XML::
++
+The following example shows how to work with the first parameter being a ref-cursor in
+XML:
++
 .XML Configuration
-[source, xml, role="xmlContent"]
+[source, xml]
 ----
 <bean id="reader" class="o.s.batch.item.database.StoredProcedureItemReader">
     <property name="dataSource" ref="dataSource"/>
     <property name="procedureName" value="sp_customer_credit"/>
-    <property name="function" value="true"/>
+    <property name="refCursorPosition" value="1"/>
     <property name="rowMapper">
         <bean class="org.springframework.batch.sample.domain.CustomerCreditRowMapper"/>
     </property>
 </bean>
 ----
+====
 
-[role="javaContent"]
+
+
+If the cursor was returned from a stored function (option 3), we would need to set the
+property "[maroon]#function#" to `true`. It defaults to `false`.
+
+
+[tabs]
+====
+Java::
++
 The following example shows property to `true` in Java:
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @Bean
 public StoredProcedureItemReader reader(DataSource dataSource) {
@@ -405,6 +428,26 @@ public StoredProcedureItemReader reader(DataSource dataSource) {
 }
 ----
 
+XML::
++
+The following example shows property to `true` in XML:
++
+.XML Configuration
+[source, xml]
+----
+<bean id="reader" class="o.s.batch.item.database.StoredProcedureItemReader">
+    <property name="dataSource" ref="dataSource"/>
+    <property name="procedureName" value="sp_customer_credit"/>
+    <property name="function" value="true"/>
+    <property name="rowMapper">
+        <bean class="org.springframework.batch.sample.domain.CustomerCreditRowMapper"/>
+    </property>
+</bean>
+----
+====
+
+
+
 In all of these cases, we need to define a `RowMapper` as well as a `DataSource` and the
 actual procedure name.
 
@@ -413,11 +456,42 @@ set by using the `parameters` property. The following example, for Oracle, decla
 parameters. The first one is the `out` parameter that returns the ref-cursor, and the
 second and third are in parameters that takes a value of type `INTEGER`.
 
-[role="xmlContent"]
-The following example shows how to work with parameters in XML:
 
+[tabs]
+====
+Java::
++
+The following example shows how to work with parameters in Java:
++
+.Java Configuration
+[source, java]
+----
+@Bean
+public StoredProcedureItemReader reader(DataSource dataSource) {
+	List<SqlParameter> parameters = new ArrayList<>();
+	parameters.add(new SqlOutParameter("newId", OracleTypes.CURSOR));
+	parameters.add(new SqlParameter("amount", Types.INTEGER);
+	parameters.add(new SqlParameter("custId", Types.INTEGER);
+
+	StoredProcedureItemReader reader = new StoredProcedureItemReader();
+
+	reader.setDataSource(dataSource);
+	reader.setProcedureName("spring.cursor_func");
+	reader.setParameters(parameters);
+	reader.setRefCursorPosition(1);
+	reader.setRowMapper(rowMapper());
+	reader.setPreparedStatementSetter(parameterSetter());
+
+	return reader;
+}
+----
+
+XML::
++
+The following example shows how to work with parameters in XML:
++
 .XML Configuration
-[source, xml, role="xmlContent"]
+[source, xml]
 ----
 <bean id="reader" class="o.s.batch.item.database.StoredProcedureItemReader">
     <property name="dataSource" ref="dataSource"/>
@@ -450,31 +524,9 @@ The following example shows how to work with parameters in XML:
 </bean>
 ----
 
-[role="javaContent"]
-The following example shows how to work with parameters in Java:
+====
 
-.Java Configuration
-[source, java, role="javaContent"]
-----
-@Bean
-public StoredProcedureItemReader reader(DataSource dataSource) {
-	List<SqlParameter> parameters = new ArrayList<>();
-	parameters.add(new SqlOutParameter("newId", OracleTypes.CURSOR));
-	parameters.add(new SqlParameter("amount", Types.INTEGER);
-	parameters.add(new SqlParameter("custId", Types.INTEGER);
 
-	StoredProcedureItemReader reader = new StoredProcedureItemReader();
-
-	reader.setDataSource(dataSource);
-	reader.setProcedureName("spring.cursor_func");
-	reader.setParameters(parameters);
-	reader.setRefCursorPosition(1);
-	reader.setRowMapper(rowMapper());
-	reader.setPreparedStatementSetter(parameterSetter());
-
-	return reader;
-}
-----
 
 In addition to the parameter declarations, we need to specify a `PreparedStatementSetter`
 implementation that sets the parameter values for the call. This works the same as for
@@ -511,39 +563,16 @@ After the reader has been opened, it passes back one item per call to `read` in 
 basic fashion as any other `ItemReader`. The paging happens behind the scenes when
 additional rows are needed.
 
-[role="xmlContent"]
-The following XML example configuration uses a similar 'customer credit' example as the
-cursor-based `ItemReaders` shown previously:
 
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<bean id="itemReader" class="org.spr...JdbcPagingItemReader">
-    <property name="dataSource" ref="dataSource"/>
-    <property name="queryProvider">
-        <bean class="org.spr...SqlPagingQueryProviderFactoryBean">
-            <property name="selectClause" value="select id, name, credit"/>
-            <property name="fromClause" value="from customer"/>
-            <property name="whereClause" value="where status=:status"/>
-            <property name="sortKey" value="id"/>
-        </bean>
-    </property>
-    <property name="parameterValues">
-        <map>
-            <entry key="status" value="NEW"/>
-        </map>
-    </property>
-    <property name="pageSize" value="1000"/>
-    <property name="rowMapper" ref="customerMapper"/>
-</bean>
-----
-
-[role="javaContent"]
+[tabs]
+====
+Java::
++
 The following Java example configuration uses a similar 'customer credit' example as the
 cursor-based `ItemReaders` shown previously:
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @Bean
 public JdbcPagingItemReader itemReader(DataSource dataSource, PagingQueryProvider queryProvider) {
@@ -573,6 +602,38 @@ public SqlPagingQueryProviderFactoryBean queryProvider() {
 }
 ----
 
+XML::
++
+The following XML example configuration uses a similar 'customer credit' example as the
+cursor-based `ItemReaders` shown previously:
++
+.XML Configuration
+[source, xml]
+----
+<bean id="itemReader" class="org.spr...JdbcPagingItemReader">
+    <property name="dataSource" ref="dataSource"/>
+    <property name="queryProvider">
+        <bean class="org.spr...SqlPagingQueryProviderFactoryBean">
+            <property name="selectClause" value="select id, name, credit"/>
+            <property name="fromClause" value="from customer"/>
+            <property name="whereClause" value="where status=:status"/>
+            <property name="sortKey" value="id"/>
+        </bean>
+    </property>
+    <property name="parameterValues">
+        <map>
+            <entry key="status" value="NEW"/>
+        </map>
+    </property>
+    <property name="pageSize" value="1000"/>
+    <property name="rowMapper" ref="customerMapper"/>
+</bean>
+----
+
+====
+
+
+
 This configured `ItemReader` returns `CustomerCredit` objects using the `RowMapper`,
 which must be specified. The 'pageSize' property determines the number of entities read
 from the database for each query run.
@@ -597,26 +658,15 @@ The `JpaPagingItemReader` lets you declare a JPQL statement and pass in a
 fashion as any other `ItemReader`. The paging happens behind the scenes when additional
 entities are needed.
 
-[role="xmlContent"]
-The following XML example configuration uses the same 'customer credit' example as the
-JDBC reader shown previously:
-
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<bean id="itemReader" class="org.spr...JpaPagingItemReader">
-    <property name="entityManagerFactory" ref="entityManagerFactory"/>
-    <property name="queryString" value="select c from CustomerCredit c"/>
-    <property name="pageSize" value="1000"/>
-</bean>
-----
-
-[role="xmlContent"]
+[tabs]
+====
+Java::
++
 The following Java example configuration uses the same 'customer credit' example as the
 JDBC reader shown previously:
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @Bean
 public JpaPagingItemReader itemReader() {
@@ -628,6 +678,25 @@ public JpaPagingItemReader itemReader() {
            				.build();
 }
 ----
+
+XML::
++
+The following XML example configuration uses the same 'customer credit' example as the
+JDBC reader shown previously:
++
+.XML Configuration
+[source, xml]
+----
+<bean id="itemReader" class="org.spr...JpaPagingItemReader">
+    <property name="entityManagerFactory" ref="entityManagerFactory"/>
+    <property name="queryString" value="select c from CustomerCredit c"/>
+    <property name="pageSize" value="1000"/>
+</bean>
+----
+
+====
+
+
 
 This configured `ItemReader` returns `CustomerCredit` objects in the exact same manner as
 described for the `JdbcPagingItemReader` above, assuming the `CustomerCredit` object has the
