--- a/spring-batch-docs/modules/ROOT/pages/readers-and-writers/reusing-existing-services.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/readers-and-writers/reusing-existing-services.adoc
@@ -14,25 +14,15 @@ because it is such a common concern, Spring Batch provides implementations:
 `ItemReaderAdapter` and `ItemWriterAdapter`. Both classes implement the standard Spring
 method by invoking the delegate pattern and are fairly simple to set up.
 
-[role="xmlContent"]
-The following XML example uses the `ItemReaderAdapter`:
 
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<bean id="itemReader" class="org.springframework.batch.item.adapter.ItemReaderAdapter">
-    <property name="targetObject" ref="fooService" />
-    <property name="targetMethod" value="generateFoo" />
-</bean>
-
-<bean id="fooService" class="org.springframework.batch.item.sample.FooService" />
-----
-
-[role="javaContent"]
+[tabs]
+====
+Java::
++
 The following Java example uses the `ItemReaderAdapter`:
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @Bean
 public ItemReaderAdapter itemReader() {
@@ -50,31 +40,40 @@ public FooService fooService() {
 }
 ----
 
+XML::
++
+The following XML example uses the `ItemReaderAdapter`:
++
+.XML Configuration
+[source, xml]
+----
+<bean id="itemReader" class="org.springframework.batch.item.adapter.ItemReaderAdapter">
+    <property name="targetObject" ref="fooService" />
+    <property name="targetMethod" value="generateFoo" />
+</bean>
+
+<bean id="fooService" class="org.springframework.batch.item.sample.FooService" />
+----
+
+====
+
+
+
 One important point to note is that the contract of the `targetMethod` must be the same
 as the contract for `read`: When exhausted, it returns `null`. Otherwise, it returns an
 `Object`. Anything else prevents the framework from knowing when processing should end,
 either causing an infinite loop or incorrect failure, depending upon the implementation
 of the `ItemWriter`.
 
-[role="xmlContent"]
-The following XML example uses the `ItemWriterAdapter`:
 
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<bean id="itemWriter" class="org.springframework.batch.item.adapter.ItemWriterAdapter">
-    <property name="targetObject" ref="fooService" />
-    <property name="targetMethod" value="processFoo" />
-</bean>
-
-<bean id="fooService" class="org.springframework.batch.item.sample.FooService" />
-----
-
-[role="javaContent"]
+[tabs]
+====
+Java::
++
 The following Java example uses the `ItemWriterAdapter`:
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @Bean
 public ItemWriterAdapter itemWriter() {
@@ -91,4 +90,23 @@ public FooService fooService() {
 	return new FooService();
 }
 ----
+
+XML::
++
+The following XML example uses the `ItemWriterAdapter`:
++
+.XML Configuration
+[source, xml]
+----
+<bean id="itemWriter" class="org.springframework.batch.item.adapter.ItemWriterAdapter">
+    <property name="targetObject" ref="fooService" />
+    <property name="targetMethod" value="processFoo" />
+</bean>
+
+<bean id="fooService" class="org.springframework.batch.item.sample.FooService" />
+----
+
+====
+
+
 
