--- a/spring-batch-docs/modules/ROOT/pages/step/chunk-oriented-processing/configuring-skip.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/step/chunk-oriented-processing/configuring-skip.adoc
@@ -10,29 +10,14 @@ allow for skips. If a vendor is not loaded because it was formatted incorrectly 
 missing necessary information, there probably are not issues. Usually, these bad
 records are logged as well, which is covered later when discussing listeners.
 
-[role="xmlContent"]
-The following XML example shows an example of using a skip limit:
-
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<step id="step1">
-   <tasklet>
-      <chunk reader="flatFileItemReader" writer="itemWriter"
-             commit-interval="10" skip-limit="10">
-         <skippable-exception-classes>
-            <include class="org.springframework.batch.item.file.FlatFileParseException"/>
-         </skippable-exception-classes>
-      </chunk>
-   </tasklet>
-</step>
-----
-
-[role="javaContent"]
+[tabs]
+====
+Java::
++
 The following Java example shows an example of using a skip limit:
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @Bean
 public Step step1(JobRepository jobRepository, PlatformTransactionManager transactionManager) {
@@ -46,6 +31,29 @@ public Step step1(JobRepository jobRepository, PlatformTransactionManager transa
 				.build();
 }
 ----
+
+XML::
++
+The following XML example shows an example of using a skip limit:
++
+.XML Configuration
+[source, xml]
+----
+<step id="step1">
+   <tasklet>
+      <chunk reader="flatFileItemReader" writer="itemWriter"
+             commit-interval="10" skip-limit="10">
+         <skippable-exception-classes>
+            <include class="org.springframework.batch.item.file.FlatFileParseException"/>
+         </skippable-exception-classes>
+      </chunk>
+   </tasklet>
+</step>
+----
+
+====
+
+
 
 In the preceding example, a `FlatFileItemReader` is used. If, at any point, a
 `FlatFileParseException` is thrown, the item is skipped and counted against the total
@@ -61,30 +69,14 @@ One problem with the preceding example is that any other exception besides a
 correct behavior. However, in other scenarios, it may be easier to identify which
 exceptions should cause failure and skip everything else.
 
-[role="xmlContent"]
-The following XML example shows an example excluding a particular exception:
-
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<step id="step1">
-    <tasklet>
-        <chunk reader="flatFileItemReader" writer="itemWriter"
-               commit-interval="10" skip-limit="10">
-            <skippable-exception-classes>
-                <include class="java.lang.Exception"/>
-                <exclude class="java.io.FileNotFoundException"/>
-            </skippable-exception-classes>
-        </chunk>
-    </tasklet>
-</step>
-----
-
-[role="javaContent"]
+[tabs]
+====
+Java::
++
 The following Java example shows an example excluding a particular exception:
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @Bean
 public Step step1(JobRepository jobRepository, PlatformTransactionManager transactionManager) {
@@ -100,6 +92,30 @@ public Step step1(JobRepository jobRepository, PlatformTransactionManager transa
 }
 ----
 
+XML::
++
+The following XML example shows an example excluding a particular exception:
++
+.XML Configuration
+[source, xml]
+----
+<step id="step1">
+    <tasklet>
+        <chunk reader="flatFileItemReader" writer="itemWriter"
+               commit-interval="10" skip-limit="10">
+            <skippable-exception-classes>
+                <include class="java.lang.Exception"/>
+                <exclude class="java.io.FileNotFoundException"/>
+            </skippable-exception-classes>
+        </chunk>
+    </tasklet>
+</step>
+----
+
+====
+
+
+
 By identifying `java.lang.Exception` as a skippable exception class, the configuration
 indicates that all `Exceptions` are skippable. However, by "`excluding`"
 `java.io.FileNotFoundException`, the configuration refines the list of skippable
@@ -109,16 +125,18 @@ exception class is fatal if encountered (that is, they are not skipped).
 For any exception encountered, the skippability is determined by the nearest superclass
 in the class hierarchy. Any unclassified exception is treated as 'fatal'.
 
-ifdef::backend-spring-html[]
-[role="xmlContent"]
+
+[tabs]
+====
+Java::
++
+The order of the `skip` and `noSkip` method calls does not matter.
+
+XML::
++
 The order of the `<include/>` and `<exclude/>` elements does not matter.
 
-[role="javaContent"]
-The order of the `skip` and `noSkip` method calls does not matter.
-endif::backend-spring-html[]
+====
 
-ifdef::backend-pdf[]
-The order of specifying include versus exclude (by using either the XML tags or the `skip` and
-`noSkip` method calls) does not matter.
-endif::backend-pdf[]
+
 
