--- a/spring-batch-docs/modules/ROOT/pages/step/chunk-oriented-processing/registering-item-streams.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/step/chunk-oriented-processing/registering-item-streams.adoc
@@ -13,39 +13,14 @@ registered separately. This is often the case where indirect dependencies, such 
 delegates, are injected into the reader and writer. You can register a stream on the
 `step` through the `stream` element.
 
-[role="xmlContent"]
-The following example shows how to register a `stream` on a `step` in XML:
-
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<step id="step1">
-    <tasklet>
-        <chunk reader="itemReader" writer="compositeWriter" commit-interval="2">
-            <streams>
-                <stream ref="fileItemWriter1"/>
-                <stream ref="fileItemWriter2"/>
-            </streams>
-        </chunk>
-    </tasklet>
-</step>
-
-<beans:bean id="compositeWriter"
-            class="org.springframework.batch.item.support.CompositeItemWriter">
-    <beans:property name="delegates">
-        <beans:list>
-            <beans:ref bean="fileItemWriter1" />
-            <beans:ref bean="fileItemWriter2" />
-        </beans:list>
-    </beans:property>
-</beans:bean>
-----
-
-[role="javaContent"]
+[tabs]
+====
+Java::
++
 The following example shows how to register a `stream` on a `step` in Java:
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @Bean
 public Step step1(JobRepository jobRepository, PlatformTransactionManager transactionManager) {
@@ -75,6 +50,38 @@ public CompositeItemWriter compositeItemWriter() {
 	return itemWriter;
 }
 ----
+
+XML::
++
+The following example shows how to register a `stream` on a `step` in XML:
++
+.XML Configuration
+[source, xml]
+----
+<step id="step1">
+    <tasklet>
+        <chunk reader="itemReader" writer="compositeWriter" commit-interval="2">
+            <streams>
+                <stream ref="fileItemWriter1"/>
+                <stream ref="fileItemWriter2"/>
+            </streams>
+        </chunk>
+    </tasklet>
+</step>
+
+<beans:bean id="compositeWriter"
+            class="org.springframework.batch.item.support.CompositeItemWriter">
+    <beans:property name="delegates">
+        <beans:list>
+            <beans:ref bean="fileItemWriter1" />
+            <beans:ref bean="fileItemWriter2" />
+        </beans:list>
+    </beans:property>
+</beans:bean>
+----
+
+====
+
 
 In the preceding example, the `CompositeItemWriter` is not an `ItemStream`, but both of its
 delegates are. Therefore, both delegate writers must be explicitly registered as streams
