--- a/spring-batch-docs/modules/ROOT/pages/step/chunk-oriented-processing/retry-logic.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/step/chunk-oriented-processing/retry-logic.adoc
@@ -8,27 +8,14 @@ However, for other exceptions (such as a `DeadlockLoserDataAccessException`, whi
 indicates that the current process has attempted to update a record that another process
 holds a lock on), waiting and trying again might result in success.
 
-[role="xmlContent"]
-In XML, retry should be configured as follows:
 
-[source, xml, role="xmlContent"]
-----
-<step id="step1">
-   <tasklet>
-      <chunk reader="itemReader" writer="itemWriter"
-             commit-interval="2" retry-limit="3">
-         <retryable-exception-classes>
-            <include class="org.springframework.dao.DeadlockLoserDataAccessException"/>
-         </retryable-exception-classes>
-      </chunk>
-   </tasklet>
-</step>
-----
-
-[role="javaContent"]
+[tabs]
+====
+Java::
++
 In Java, retry should be configured as follows:
-
-[source, java, role="javaContent"]
++
+[source, java]
 ----
 @Bean
 public Step step1(JobRepository jobRepository, PlatformTransactionManager transactionManager) {
@@ -42,6 +29,28 @@ public Step step1(JobRepository jobRepository, PlatformTransactionManager transa
 				.build();
 }
 ----
+
+XML::
++
+In XML, retry should be configured as follows:
++
+[source, xml]
+----
+<step id="step1">
+   <tasklet>
+      <chunk reader="itemReader" writer="itemWriter"
+             commit-interval="2" retry-limit="3">
+         <retryable-exception-classes>
+            <include class="org.springframework.dao.DeadlockLoserDataAccessException"/>
+         </retryable-exception-classes>
+      </chunk>
+   </tasklet>
+</step>
+----
+
+====
+
+
 
 The `Step` allows a limit for the number of times an individual item can be retried and a
 list of exceptions that are "`retryable`". You can find more details on how retry works in
