--- a/spring-batch-docs/modules/ROOT/pages/step/late-binding.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/step/late-binding.adoc
@@ -6,24 +6,15 @@ to obtain a file. This works because `Resource` has a `getFile` method that retu
 `java.io.File`. You can configure both XML and flat file resources by using standard Spring
 constructs:
 
-[role="xmlContent"]
-The following example shows late binding in XML:
 
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<bean id="flatFileItemReader"
-      class="org.springframework.batch.item.file.FlatFileItemReader">
-    <property name="resource"
-              value="file://outputs/file.txt" />
-</bean>
-----
-
-[role="javaContent"]
+[tabs]
+====
+Java::
++
 The following example shows late binding in Java:
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @Bean
 public FlatFileItemReader flatFileItemReader() {
@@ -34,6 +25,25 @@ public FlatFileItemReader flatFileItemReader() {
 }
 ----
 
+XML::
++
+The following example shows late binding in XML:
++
+.XML Configuration
+[source, xml]
+----
+<bean id="flatFileItemReader"
+      class="org.springframework.batch.item.file.FlatFileItemReader">
+    <property name="resource"
+              value="file://outputs/file.txt" />
+</bean>
+----
+
+====
+
+
+
+
 The preceding `Resource` loads the file from the specified file system location. Note
 that absolute locations have to start with a double slash (`//`). In most Spring
 applications, this solution is good enough, because the names of these resources are
@@ -41,23 +51,15 @@ known at compile time. However, in batch scenarios, the file name may need to be
 determined at runtime as a parameter to the job. This can be solved using `-D` parameters
 to read a system property.
 
-[role="xmlContent"]
-The following example shows how to read a file name from a property in XML:
 
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<bean id="flatFileItemReader"
-      class="org.springframework.batch.item.file.FlatFileItemReader">
-    <property name="resource" value="${input.file.name}" />
-</bean>
-----
-
-[role="javaContent"]
+[tabs]
+====
+Java::
++
 The following shows how to read a file name from a property in Java:
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @Bean
 public FlatFileItemReader flatFileItemReader(@Value("${input.file.name}") String name) {
@@ -67,6 +69,24 @@ public FlatFileItemReader flatFileItemReader(@Value("${input.file.name}") String
 			...
 }
 ----
+
+XML::
++
+The following example shows how to read a file name from a property in XML:
++
+.XML Configuration
+[source, xml]
+----
+<bean id="flatFileItemReader"
+      class="org.springframework.batch.item.file.FlatFileItemReader">
+    <property name="resource" value="${input.file.name}" />
+</bean>
+----
+
+====
+
+
+
 
 All that would be required for this solution to work would be a system argument (such as
 `-Dinput.file.name="file://outputs/file.txt"`).
@@ -80,23 +100,15 @@ Often, in a batch setting, it is preferable to parameterize the file name in the
 way. To accomplish this, Spring Batch allows for the late binding of various `Job` and
 `Step` attributes.
 
-[role="xmlContent"]
-The following example shows how to parameterize a file name in XML:
 
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<bean id="flatFileItemReader" scope="step"
-      class="org.springframework.batch.item.file.FlatFileItemReader">
-    <property name="resource" value="#{jobParameters['input.file.name']}" />
-</bean>
-----
-
-[role="javaContent"]
+[tabs]
+====
+Java::
++
 The following example shows how to parameterize a file name in Java:
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @StepScope
 @Bean
@@ -108,35 +120,37 @@ public FlatFileItemReader flatFileItemReader(@Value("#{jobParameters['input.file
 }
 ----
 
+XML::
++
+The following example shows how to parameterize a file name in XML:
++
+.XML Configuration
+[source, xml]
+----
+<bean id="flatFileItemReader" scope="step"
+      class="org.springframework.batch.item.file.FlatFileItemReader">
+    <property name="resource" value="#{jobParameters['input.file.name']}" />
+</bean>
+----
+
+====
+
+
+
+
+
 You can access both the `JobExecution` and `StepExecution` level `ExecutionContext` in
 the same way.
 
-[role="xmlContent"]
-The following example shows how to access the `ExecutionContext` in XML:
 
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<bean id="flatFileItemReader" scope="step"
-      class="org.springframework.batch.item.file.FlatFileItemReader">
-    <property name="resource" value="#{jobExecutionContext['input.file.name']}" />
-</bean>
-----
-
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<bean id="flatFileItemReader" scope="step"
-      class="org.springframework.batch.item.file.FlatFileItemReader">
-    <property name="resource" value="#{stepExecutionContext['input.file.name']}" />
-</bean>
-----
-
-[role="javaContent"]
+[tabs]
+====
+Java::
++
 The following example shows how to access the `ExecutionContext` in Java:
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @StepScope
 @Bean
@@ -147,9 +161,9 @@ public FlatFileItemReader flatFileItemReader(@Value("#{jobExecutionContext['inpu
 			...
 }
 ----
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @StepScope
 @Bean
@@ -160,6 +174,30 @@ public FlatFileItemReader flatFileItemReader(@Value("#{stepExecutionContext['inp
 			...
 }
 ----
+
+XML::
++
+The following example shows how to access the `ExecutionContext` in XML:
++
+.XML Configuration
+[source, xml]
+----
+<bean id="flatFileItemReader" scope="step"
+      class="org.springframework.batch.item.file.FlatFileItemReader">
+    <property name="resource" value="#{jobExecutionContext['input.file.name']}" />
+</bean>
+----
++
+.XML Configuration
+[source, xml]
+----
+<bean id="flatFileItemReader" scope="step"
+      class="org.springframework.batch.item.file.FlatFileItemReader">
+    <property name="resource" value="#{stepExecutionContext['input.file.name']}" />
+</bean>
+----
+====
+
 
 NOTE: Any bean that uses late binding must be declared with `scope="step"`. See
 xref:step/late-binding.adoc#step-scope[Step Scope] for more information.
@@ -185,23 +223,15 @@ in Spring 3.0.
 All of the late binding examples shown earlier have a scope of `step` declared on the
 bean definition.
 
-[role="xmlContent"]
-The following example shows an example of binding to step scope in XML:
 
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<bean id="flatFileItemReader" scope="step"
-      class="org.springframework.batch.item.file.FlatFileItemReader">
-    <property name="resource" value="#{jobParameters[input.file.name]}" />
-</bean>
-----
-
-[role="javaContent"]
+[tabs]
+====
+Java::
++
 The following example shows an example of binding to step scope in Java:
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @StepScope
 @Bean
@@ -212,6 +242,23 @@ public FlatFileItemReader flatFileItemReader(@Value("#{jobParameters[input.file.
 			...
 }
 ----
+
+XML::
++
+The following example shows an example of binding to step scope in XML:
++
+.XML Configuration
+[source, xml]
+----
+<bean id="flatFileItemReader" scope="step"
+      class="org.springframework.batch.item.file.FlatFileItemReader">
+    <property name="resource" value="#{jobParameters[input.file.name]}" />
+</bean>
+----
+
+====
+
+
 
 Using a scope of `Step` is required to use late binding, because the bean cannot
 actually be instantiated until the `Step` starts, to let the attributes be found.
@@ -247,30 +294,15 @@ per running job. Additionally, support is provided for late binding of reference
 accessible from the `JobContext` by using `#{..}` placeholders. Using this feature, you can pull bean
 properties from the job or job execution context and the job parameters.
 
-[role="xmlContent"]
-The following example shows an example of binding to job scope in XML:
 
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<bean id="..." class="..." scope="job">
-    <property name="name" value="#{jobParameters[input]}" />
-</bean>
-----
-
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<bean id="..." class="..." scope="job">
-    <property name="name" value="#{jobExecutionContext['input.name']}.txt" />
-</bean>
-----
-
-[role="javaContent"]
+[tabs]
+====
+Java::
++
 The following example shows an example of binding to job scope in Java:
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @JobScope
 @Bean
@@ -281,9 +313,9 @@ public FlatFileItemReader flatFileItemReader(@Value("#{jobParameters[input]}") S
 			...
 }
 ----
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @JobScope
 @Bean
@@ -294,6 +326,30 @@ public FlatFileItemReader flatFileItemReader(@Value("#{jobExecutionContext['inpu
 			...
 }
 ----
+
+XML::
++
+The following example shows an example of binding to job scope in XML:
++
+.XML Configuration
+[source, xml]
+----
+<bean id="..." class="..." scope="job">
+    <property name="name" value="#{jobParameters[input]}" />
+</bean>
+----
++
+.XML Configuration
+[source, xml]
+----
+<bean id="..." class="..." scope="job">
+    <property name="name" value="#{jobExecutionContext['input.name']}.txt" />
+</bean>
+----
+
+====
+
+
 
 Because it is not part of the Spring container by default, the scope must be added
 explicitly, by using the `batch` namespace, by including a bean definition explicitly for
