--- a/spring-batch-docs/modules/ROOT/pages/step/tasklet.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/step/tasklet.adoc
@@ -13,50 +13,15 @@ an exception to signal a failure. Each call to a `Tasklet` is wrapped in a trans
 `Tasklet` implementors might call a stored procedure, a script, or a SQL update
 statement.
 
-ifdef::backend-spring-html[]
-[role="xmlContent"]
-To create a `TaskletStep` in XML, the `ref` attribute of the `<tasklet/>` element should
-reference a bean that defines a `Tasklet` object. No `<chunk/>` element should be used
-within the `<tasklet/>`. The following example shows a simple tasklet:
 
-[source, xml, role="xmlContent"]
-----
-<step id="step1">
-    <tasklet ref="myTasklet"/>
-</step>
-----
-
-[role="javaContent"]
+[tabs]
+====
+Java::
++
 To create a `TaskletStep` in Java, the bean passed to the `tasklet` method of the builder
 should implement the `Tasklet` interface.  No call to `chunk` should be called when
 building a `TaskletStep`. The following example shows a simple tasklet:
-
-[source, java, role="javaContent"]
-----
-@Bean
-public Step step1(JobRepository jobRepository, PlatformTransactionManager transactionManager) {
-    return new StepBuilder("step1", jobRepository)
-    			.tasklet(myTasklet(), transactionManager)
-    			.build();
-}
-----
-endif::backend-spring-html[]
-
-ifdef::backend-pdf[]
-To create a `TaskletStep` the bean associated with the step (through the `ref` attribute
-when using the namespace or passed to the `tasklet` method when using Java configuration)
-should implement the `Tasklet` interface.  The following example shows a
-simple `tasklet`:
-
-.XML Configuration
-[source, xml]
-----
-<step id="step1">
-    <tasklet ref="myTasklet"/>
-</step>
-----
-
-.Java Configuration
++
 [source, java]
 ----
 @Bean
@@ -66,7 +31,26 @@ public Step step1(JobRepository jobRepository, PlatformTransactionManager transa
     			.build();
 }
 ----
-endif::backend-pdf[]
+
+XML::
++
+To create a `TaskletStep` in XML, the `ref` attribute of the `<tasklet/>` element should
+reference a bean that defines a `Tasklet` object. No `<chunk/>` element should be used
+within the `<tasklet/>`. The following example shows a simple tasklet:
++
+[source, xml]
+----
+<step id="step1">
+    <tasklet ref="myTasklet"/>
+</step>
+----
+
+====
+
+
+
+
+
 
 NOTE: If it implements the `StepListener` interface, `TaskletStep` automatically registers the tasklet as a `StepListener`.
 
@@ -79,25 +63,15 @@ class: `TaskletAdapter`. An example where this may be useful is an existing DAO 
 used to update a flag on a set of records. You can use the `TaskletAdapter` to call this
 class without having to write an adapter for the `Tasklet` interface.
 
-[role="xmlContent"]
-The following example shows how to define a `TaskletAdapter` in XML:
 
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<bean id="myTasklet" class="o.s.b.core.step.tasklet.MethodInvokingTaskletAdapter">
-    <property name="targetObject">
-        <bean class="org.mycompany.FooDao"/>
-    </property>
-    <property name="targetMethod" value="updateFoo" />
-</bean>
-----
-
-[role="JavaContent"]
+[tabs]
+====
+Java::
++
 The following example shows how to define a `TaskletAdapter` in Java:
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @Bean
 public MethodInvokingTaskletAdapter myTasklet() {
@@ -109,6 +83,24 @@ public MethodInvokingTaskletAdapter myTasklet() {
 	return adapter;
 }
 ----
+
+XML::
++
+The following example shows how to define a `TaskletAdapter` in XML:
++
+.XML Configuration
+[source, xml]
+----
+<bean id="myTasklet" class="o.s.b.core.step.tasklet.MethodInvokingTaskletAdapter">
+    <property name="targetObject">
+        <bean class="org.mycompany.FooDao"/>
+    </property>
+    <property name="targetMethod" value="updateFoo" />
+</bean>
+----
+
+====
+
 
 [[exampleTaskletImplementation]]
 == Example `Tasklet` Implementation
@@ -157,34 +149,15 @@ The preceding `tasklet` implementation deletes all files within a given director
 should be noted that the `execute` method is called only once. All that is left is to
 reference the `tasklet` from the `step`.
 
-[role="xmlContent"]
-The following example shows how to reference the `tasklet` from the `step` in XML:
 
-.XML Configuration
-[source, xml, role="xmlContent"]
-----
-<job id="taskletJob">
-    <step id="deleteFilesInDir">
-       <tasklet ref="fileDeletingTasklet"/>
-    </step>
-</job>
-
-<beans:bean id="fileDeletingTasklet"
-            class="org.springframework.batch.sample.tasklet.FileDeletingTasklet">
-    <beans:property name="directoryResource">
-        <beans:bean id="directory"
-                    class="org.springframework.core.io.FileSystemResource">
-            <beans:constructor-arg value="target/test-outputs/test-dir" />
-        </beans:bean>
-    </beans:property>
-</beans:bean>
-----
-
-[role="javaContent"]
+[tabs]
+====
+Java::
++
 The following example shows how to reference the `tasklet` from the `step` in Java:
-
++
 .Java Configuration
-[source, java, role="javaContent"]
+[source, java]
 ----
 @Bean
 public Job taskletJob(JobRepository jobRepository) {
@@ -209,4 +182,31 @@ public FileDeletingTasklet fileDeletingTasklet() {
 	return tasklet;
 }
 ----
+
+XML::
++
+The following example shows how to reference the `tasklet` from the `step` in XML:
++
+.XML Configuration
+[source, xml]
+----
+<job id="taskletJob">
+    <step id="deleteFilesInDir">
+       <tasklet ref="fileDeletingTasklet"/>
+    </step>
+</job>
+
+<beans:bean id="fileDeletingTasklet"
+            class="org.springframework.batch.sample.tasklet.FileDeletingTasklet">
+    <beans:property name="directoryResource">
+        <beans:bean id="directory"
+                    class="org.springframework.core.io.FileSystemResource">
+            <beans:constructor-arg value="target/test-outputs/test-dir" />
+        </beans:bean>
+    </beans:property>
+</beans:bean>
+----
+
+====
+
 
